# OneNeuralNetwork

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dockers/: Dockerfile  env_vars  requirements.txt  trt_8_5_1_7.sh
md_doc/: design_manual.md  developer_manual.md
onn/: __init__.py  operator.py  slot.py
onn/atomic/: __init__.py  add.py
onn/atomic/backend/: __init__.py
onn/atomic/backend/triton/: __init__.py  add.py
onn/block/: __init__.py
onn/cv/: __init__.py
onn/nlp/: __init__.py
onn/task/: __init__.py
onn/task/auto_driving/: __init__.py
tests/: pkg_test.py
tests/atomic/: add_test.py
